force-app/main/default/objects/Test1__c/Test1__c.object-meta.xml
<CustomObject>
    <label>Test1</label>
    <nameField>
        <label>Test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>