force-app/main/default/objects/Test1__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test1</relationshipLabel>
    <relationshipName>Test1</relationshipName>
    <type>Lookup</type>
</CustomField>