force-app/main/default/objects/Test1__c/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <label>Test2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>