force-app/main/default/objects/Test1__c/fields/Test3__c.field-meta.xml
<CustomField>
    <fullName>Test3__c</fullName>
    <label>Test1</label>
    <summarizedField>Test10__c.nnum__c</summarizedField>
    <summaryForeignKey>Test10__c.Test11__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>