force-app/main/default/objects/Test1__c/listViews/X123.listView-meta.xml
<ListView>
    <fullName>X123</fullName>
    <columns>NAME</columns>
    <columns>Test1__c</columns>
    <columns>Test3__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <label>123</label>
    <language>ja</language>
</ListView>